--- a/catalog/index.html
+++ b/catalog/index.html
@@ -191,28 +191,31 @@
 
                             <h3 class="font-weight-bold text-justify py-2">
                                 Reserve your seat</h3>
-                            <form method="post" action="" class="rounded-lg">
 
+                            <form method="post" action="../php/handler.php" class="rounded-lg">
                                 <div class="form-group ">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="John Doe">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="name@example.com">
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" id="subject" placeholder="IELTS ">
+                                    <input type="email" class="form-control" name="subject" id="subject"
+                                        placeholder="I need a ">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                                 </div>
                             </form>
                         </div>
@@ -266,28 +269,30 @@
                             <p class="text-justify">Don’t keep your bright future waiting – so, apply today.</p>
                             <h3 class="font-weight-bold text-justify py-2">
                                 Reserve your seat</h3>
-                            <form method="post" action="" class="rounded-lg">
-
+                            <form method="post" action="../php/handler.php" class="rounded-lg">
                                 <div class="form-group ">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="John Doe">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="name@example.com">
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" id="subject" placeholder=" ">
+                                    <input type="email" class="form-control" name="subject" id="subject"
+                                        placeholder="I need a ">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                                 </div>
                             </form>
                         </div>
@@ -328,28 +333,30 @@
                                 only.</p>
                             <h3 class="font-weight-bold text-justify py-2">
                                 Reserve your seat</h3>
-                            <form method="post" action="" class="rounded-lg">
-
+                            <form method="post" action="../php/handler.php" class="rounded-lg">
                                 <div class="form-group ">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="John Doe">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="name@example.com">
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" id="subject" placeholder="">
+                                    <input type="email" class="form-control" name="subject" id="subject"
+                                        placeholder="I need a ">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                                 </div>
                             </form>
                         </div>
@@ -372,29 +379,30 @@
 
                             <h3 class="font-weight-bold text-justify py-2">
                                 Reserve your seat</h3>
-                            <form method="post" action="" class="rounded-lg">
-
+                            <form method="post" action="../php/handler.php" class="rounded-lg">
                                 <div class="form-group ">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="John Doe">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="name@example.com">
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" id="subject" placeholder="
-                                    ">
+                                    <input type="email" class="form-control" name="subject" id="subject"
+                                        placeholder="I need a ">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                                 </div>
                             </form>
                         </div>
@@ -416,28 +424,30 @@
                                 Microsoft Certified Solutions Associate is the entry-level Microsoft certification.</p>
                             <h3 class="font-weight-bold text-justify py-2">
                                 Reserve your seat</h3>
-                            <form method="post" action="" class="rounded-lg">
-
+                            <form method="post" action="../php/handler.php" class="rounded-lg">
                                 <div class="form-group ">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="John Doe">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="name@example.com">
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" id="subject" placeholder="">
+                                    <input type="email" class="form-control" name="subject" id="subject"
+                                        placeholder="I need a ">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                                 </div>
                             </form>
                         </div>
