--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header>
 
     <div class="container-fluid bg-white mt-0">
-        <div class="row py-5 px-0 ">
+        <div class="row  px-0 ">
             <div class="col-md-3">
                 <div class="card border-0">
                     <div class="card-body text-center text-justify my-5 card-body-intro">
@@ -142,16 +142,16 @@
 
     <div class="container-fluid bg-light text-justify">
         <div class="row py-5">
-            <div class="col-md-6 p-5">
+            <div class="col-md-6 col-sm-12 p-5">
                 <div class="pb-5">
-                    <p class="h1">WELCOME TO BUY IELTS </p>
-                    <p class="h1">WITHOUT EXAM</p>
+                    <p class="h2">WELCOME TO BUY IELTS </p>
+                    <p class="h2">WITHOUT EXAM</p>
                 </div>
                 <p class="">Your One Stop Shop for Genuine IELTS Certificates.</p>
                 <p class="pb-5">Are you looking for IELTS certificate for sale without exam? Well, your search has made
                     you
                     land
-                    on the right page! We are a renowned provider of IELTS certificates without exam. The IELTS or the
+                    on the right page! We are a renowned provider of IELTS certificates. IELTS or the
                     International English Language Test is the most popular English language proficiency test of the
                     world
                     for global migration and higher education. </p>
@@ -160,35 +160,36 @@
                     <span class="h5 ">+1(740)306-2240</span>
                 </a>
             </div>
-            <div class="col-md-6 p-5">
+            <div class="col-md-6 col-sm-12 p-5">
                 <img src="img/img-1.jpg" class="img-fluid mb-5">
                 <p class="">It assesses all your English skills including listening, writing, reading and speaking. The
                     aim
                     of this test is to make sure that you don’t have any problem communicating in your new life abroad.
                     However, this test can be quite difficult to pass, especially for those who do not come from an
                     English
-                    background. And this is exactly where IELTS CERTIFICATO comes into the picture! Excited to know more
+                    background. And this is exactly where IELTS CERTIFICATION comes into the picture. Excited to know
+                    more
                     about us?</p>
 
             </div>
         </div>
     </div>
 
-    <div class="container-fluid bg-primary darken p-5">
+    <div class="container-fluid bg-primary darken p-5 text-center">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-12 ">
                 <p class="h2 text-white ">Get in touch</p>
             </div>
-            <div class="col-md-6 text-center">
-                <button class=" btn btn-outline-light btn-lg rounded-pill py-2 px-5 ">CONTACT US</button>
+            <div class="col-md-6 col-sm-12 ">
+                <a class=" btn btn-outline-light btn-lg rounded-pill py-2 px-5 " href="contact/">CONTACT US</a>
             </div>
         </div>
     </div>
 
     <div class="bg-light">
-        <div class="container p-5">
+        <div class="container py-5">
             <div class="row">
-                <div class="col-md-6 ">
+                <div class="col-md-6 col-sm-12">
                     <img src="img/img2.jpg" class="img-fluid pb-3">
                     <div class="py-2">
                         <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
@@ -203,11 +204,12 @@
                     <img src="img/img3.jpg" class="img-fluid pb-3">
                 </div>
 
-                <div class="col-md-6 ">
+                <div class="col-md-6 col-sm-12 p-5">
                     <p class="h2 pb-4">Make your success a priority</p>
-                    <p class="pb-2">Buy IELTS, TOEFL, ESOL AUTODESK CERTIFICATES, Dubai Passport IELTS, TOEFL, ESOL
-                        AUTODESK CERTIFICATES with the British Council.</p>
-                    <p class="pb-2">How Do I Trust? We are the largest in online certifications that we provide our
+                    <p class="pb-2">Buy IELTS, TOEFL, ESOL AUTODESK CERTIFICATES, Dubai Passport , CERTIFICATES with Us.
+                    </p>
+                    <p class="pb-2">How do I trust your service? We are the largest in online certifications.We provide
+                        our
                         customers with certificates valid in many courses. </p>
 
                     <img src="img/img4.jpg" class="img-fluid pb-3">
@@ -216,30 +218,31 @@
         </div>
     </div>
 
-    <div class="bg-light p-5">
+    <div class="bg-light pb-5">
         <div class="container-fluid">
 
             <p class="h4 text-center pb-5">BUY IELTS CERTIFICATE ONLINE | IELTS CERTIFICATE WITHOUT EXAMS</p>
-            <div class="row pb-5">
-                <div class="col-md-6  ">
+            <div class="row p-3">
+                <div class="col-md-6 col-sm-12 ">
                     <img src="img/img6.jpg" class="img-fluid  d-block mb-5">
                 </div>
-                <div class="col-md-6 ">
+                <div class="col-md-6 col-sm-12">
                     <p class="pb-5">Buy REAL and REGISTERED IELTS Certificate without need to take the exam or
                         test.
                         With
                         our
                         help,
                         you
-                        can be able to get an ORIGINAL and GENUINE IELTS CERTIFICATE without facing the stress and
-                        trauma of
+                        can be able to get an ORIGINAL and GENUINE IELTS CERTIFICATE without facing the stress
+                        of
                         the
                         Exam. The IELTS CERTIFICATE we issue carries a score of your choosing and you will be able to
                         verify
                         it
                         online using the ORIGINAL IELTS TRF.</p>
+
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <p class="font-weight-bold p-2">
                                 Fake Passport For Sale | Buy Real Nebosh Certificate | Buy Fake Certificates Online |
                                 Buy
@@ -248,7 +251,7 @@
                                 CELPIP
                                 Certificate | Get Verified PTE | GMAT Certificates |</p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <p class="font-weight-bold p-2">Buy Real Visa Online | Buy Nebosh IGC123 Without Test | Buy
                                 Real Documents
                                 Online |
@@ -262,25 +265,26 @@
                 </div>
             </div>
 
-            <div class="row text-center my-5">
-                <div class="col-md-4 bg-primary darken border border-light">
-                    <h5 class="text-white p-5">Work Permits</h5>
+            <div class="row text-center p-3 ">
+
+                <div class="col-md-4 bg-primary darken border border-light mb-2">
+                    <h5 class="text-white p-5 font-weight-bold">Work Permits</h5>
                     <p class="px-5 text-white"> Do you want to work, study, visit, travel through or live
                         permanently
                         in Canada, Australia, USA, United Kingdom or New Zealand?</p>
                     <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
                 </div>
 
-                <div class="col-md-4 bg-primary darken border border-light">
-                    <h5 class="text-white p-5">Driver’s License</h5>
+                <div class="col-md-4 bg-primary darken border border-light mb-2">
+                    <h5 class="text-white p-5 font-weight-bold">Driver’s License</h5>
                     <p class="px-5 text-white"> We guarantee you a New Identity (passport, SSN,
                         driver’s license, I.D, Birth certificate, diploma) starting from a clean new Genuine Birth
                         Certificate, ID card</p>
                     <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
                 </div>
 
-                <div class="col-md-4 bg-primary darken border border-light">
-                    <h5 class="text-white p-5">Second passport & Visas</h5>
+                <div class="col-md-4 bg-primary darken border border-light mb-2">
+                    <h5 class="text-white p-5 font-weight-bold">Passport & Visas</h5>
                     <p class="px-5 text-white"> We produce Just Real Visa. This real Visa is
                         legal and you shall legally use it to travel to the Country that it is issued from.</p>
                     <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
@@ -358,7 +362,7 @@
                             <h5 class="card-title font-weight-bold">REGISTERED CERTIFICATE</h5>
                             <p class="card-text ">Signup for registered British Council and IDP certificates without
                                 sitting for any exams, The certificate is registered and can be verified online, you can
-                                use this certificate for University admission and any immigration use</p>
+                                use this certificate for University admission.</p>
                         </div>
                     </div>
                 </div>
@@ -394,71 +398,68 @@
     <div class="bg-image-2">
         <div class="container text-center p-5">
             <p class="h1 p-5 text-white">Book Now</p>
-            <form method="post" action="" class="bg-light p-5 main-form rounded-lg">
+            <form method="post" action="php/handler.php" class="bg-light p-5 main-form rounded-lg">
                 <div class="form-group ">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                    <input type="text" class="form-control" name="name" id="name" placeholder="John Doe">
                 </div>
                 <div class="form-group">
                     <label for="email">email</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
                 </div>
                 <div class="form-group">
                     <label for="subject">Subject</label>
-                    <input type="email" class="form-control" id="subject" placeholder="I need a ">
+                    <input type="email" class="form-control" name="subject" id="subject" placeholder="I need a ">
                 </div>
 
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea class="form-control" id="message" rows="6"></textarea>
+                    <textarea class="form-control" name="message" id="message" rows="6"></textarea>
                 </div>
 
                 <div class="form-group">
-                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                    <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
                 </div>
             </form>
         </div>
     </div>
 
     <div class="bg-light text-center  p-5">
-        <p class="h2 p-5">How Can I Buy IELTS Without Exam</p>
-        <p class="text-justify">You start by placing an order with us. To place an order to buy ielts without exam,
+        <p class="h2 p-5">How Can I Buy IELTS Certificate</p>
+        <p class="text-justify">You can by placing an order with us. To place an order,
             kindly
             contact
-            us via the Contact form or send us a direct Whatsapp +1(740)306-2240 or email
-            dummy@example.com . Once we receive your email , we are going to send you an in return containing
-            all information we are going to need from you,as soon as you get back to us with this information we are
-            going to give you our payment address for you to send the money so that we can start producing your
-            certifica te.Once payment is confirmed from you we will start immediately with the production of your
-            certificate. As soon as we produce your certificate we aregoing to send all your details to our inside man
-            who is part of our team but Specialist in database infiltration, He will infiltarte the needed data base and
-            put your full details online, As soon as he does that we are going to email you the login credentials that
-            you will use to check your results online</p>
+            us via the Contact form or send us a direct message via Whatsapp <span class="text-success">+1(740)306-2240
+            </span> or email
+            <span class="text-primary">dummy@example.com</span> . Once we receive your request , we will send you an in
+            return containing
+            all information we need from you. As soon as you get back to us with this information we are
+            going to give you our address for payment. Once payment is confirmed we will start
+            the production of your
+            certificate. We will then email you with login credentials to
+            check your results online</p>
 
         <a class="btn btn-lg  btn-success rounded  mx-2 my-2 text-light">
             <i class="fab fa-whatsapp fa-lg mr-1"></i>
             <span class="h5">+1(740)306-2240</span>
         </a>
-        <p class="h2 p-5">Buy IELTS certificate online Without Exam and </p>
-        <p class="text-justify">Buy Genuine IELTS Certificate Without Exam| Registered IELTS Certificate for sale We can
-            help you register IELTS without sitting down for one Exam. It will help you save precious years! And time.
+        <p class="text-justify py-5">Buy Genuine IELTS Certificate Without Exam , Registered IELTS Certificates for
+            sale We
+            can
+            help you register IELTS without sitting down for one Exam. We can help you save precious time.
             It will only take 5 days to get your IELTS certificate ready And delivered to your address. Express service
-            is required, we can Make the certificate in 2 days for a ride. The certified service surcharge will be
-            original and Registered in the database and can be verified. After your order is The insertion takes a few
-            days for us to get your details System, Once your data is registered in the system it will be inserted IELTS
-            sites / systems, and will appear real, legitimate and verifiable Forever </p>
+            is required. The certified service surcharge will be
+            original and registered in the database and is legitimate and verifiable Forever </p>
         <p class=" text-justify py-5">Are you looking for buy ielts certificate without exam? Well, your search has made
             you land on
             the right page! We are a renowned provider of ielts certificates without exam. The ielts or the
-            international english language test is the most popular english language proficiency test of the world for
-            global migration and higher education. It assesses all your english skills including listening, writing,
-            reading and speaking. The aim of this test is to make sure that you don’t have any problem communicating in
-            your new life abroad. However, this test can be quite difficult to pass, especially for those who do not
-            come from an english background. And this is exactly where ielts certificate comes into the picture! Excited
-            to know more about us? Those interested in getting their MCSE, CCNA, MCITP, CCNP, MCTS, MCSE Certification
-            can now easily get their certificates without Sweat and tiredness. We do not need to travel to other places
-            or take Try online to get our IT exams. We can get ours Certifications from where we are. We can get our IT
-            certification It will take our career to the next level or get our dream jobs Faster. </p>
+            international English language test is the most popular English language proficiency test of the world for
+            global migration and higher education. It assesses all your English skills including listening, writing,
+            reading and speaking. The aim of this test is to make sure that you don’t have any problem communicating
+            abroad. However, this test can be quite difficult to pass, especially for those who do not
+            come from an English background. This is exactly where IELTS certificate comes into the picture. Interested
+            in getting your MCSE, CCNA, MCITP, CCNP, MCTS, MCSE Certification?
+            Contact Us</p>
 
         <div class="py-2">
             <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
