--- a/services/index.html
+++ b/services/index.html
@@ -88,39 +88,34 @@
 
     <div class="bg-light table-responsive text-center">
         <h2 class="font-weight-bold text-justify py-5 text-center">Our Services</h2>
+
         <table class="table table-borderless">
             <tbody>
                 <tr>
-                    <td><button class=" rounded-lg btn btn-primary p-5">IELTS</button></td>
-                    <td><button class=" rounded-lg btn btn-info p-5">TOEFL</button></td>
-                </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-danger p-5">TOEIC</button></td>
-                    <td><button class=" rounded-lg btn btn-warning p-5">CCNA</button></td>
-                </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-danger p-5">MCSE</button></td>
-                    <td><button class=" rounded-lg btn btn-warning p-5">MCITP</button></td>
-                </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-primary p-5">CCNP</button></td>
-                    <td><button class=" rounded-lg btn btn-info p-5">MCTS</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-danger p-5">IELTS</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-primary p-5">TOEFL</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-danger p-5">TOEIC</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-primary p-5">CCNA</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-danger p-5">MCSE</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-primary p-5">MCITP</button></td>
+                    <td><button class=" rounded-lg btn btn-outline-danger p-5"> YLE</button></td>
 
                 </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-warning p-5">PET</button></td>
-                    <td><button class=" rounded-lg btn btn-danger p-5">FCE</button></td>
-                </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-info p-5">KET</button></td>
-                    <td><button class=" rounded-lg btn btn-primary p-5">ILEC</button></td>
-                </tr>
-                <tr>
-                    <td><button class=" rounded-lg btn btn-info p-5">CPE</button></td>
-                    <td><button class=" rounded-lg btn btn-primary p-5"> YLE</button></td>
+
+                <td><button class=" rounded-lg btn btn-outline-primary p-5">CCNP</button></td>
+                <td><button class=" rounded-lg btn btn-outline-danger p-5">MCTS</button></td>
+                <td><button class=" rounded-lg btn btn-outline-primary p-5">PET</button></td>
+                <td><button class=" rounded-lg btn btn-outline-danger p-5">FCE</button></td>
+                <td><button class=" rounded-lg btn btn-outline-primary p-5">KET</button></td>
+                <td><button class=" rounded-lg btn btn-outline-danger p-5">ILEC</button></td>
+                <td><button class=" rounded-lg btn btn-outline-primary p-5">CPE</button></td>
                 </tr>
             </tbody>
         </table>
+
+        <a class="btn btn-lg  btn-primary rounded  py-3 px-5 my-4 " href="../contact/">
+            <span class="h5">Contact Us</span>
+        </a>
     </div>
 
     <footer class="container-fluid bg-dark text-light text-center ">
