--- a/feedback/index.html
+++ b/feedback/index.html
@@ -5,22 +5,23 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../fontawesome/css/all.css">
-    <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
 
-    <title>IELTS-Contact</title>
+    <title>IELTS-Home</title>
 </head>
 
 <body>
-
     <header class="mb-0">
+
         <p class="bg-success text-center text-light my-0"><i class="fab fa-whatsapp fa-lg mr-2"></i><span
                 class="h6">Whatsapp
                 +1(740)306-2240</span></p>
+
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
-                <a class=" navbar-brand text-light" href="../">
+                <a class=" navbar-brand text-light" href="">
                     <p class="h1"><span class="font-weight-bold">BUY</span> IELTS</p>
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
@@ -28,94 +29,88 @@
                 <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class=" btn btn-outline-light btn-lg rounded"><span class=" h2
-                    mr-3">Menu</span><i class="fas fa-bars fa-2x"></i></span>
+                        mr-3">Menu</span><i class="fas fa-bars fa-2x"></i></span>
                 </button>
-
                 <div class="collapse navbar-collapse justify-content-end py-2" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active mx-2">
-                            <a class="nav-link py-4 " href="../">HOME</a>
-                        </li>
-                        <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../about/">ABOUT</a>
-                        </li>
-                        <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../blog">BLOG</a>
-                        </li>
-                        <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 border-bottom border-light active" href="">CONTACT<span
+                            <a class="nav-link py-4 border-bottom border-light" href="">HOME<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4" href="../FAQ">FAQ</a>
+                            <a class="nav-link py-4" href="about">ABOUT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4" href="../services">SERVICES</a>
+                            <a class="nav-link py-4" href="blog">BLOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../catalog/">OUR CATALOG</a>
+                            <a class="nav-link py-4" href="contact">CONTACT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4" href="../privacy">PRIVACY POLICY</a>
+                            <a class="nav-link py-4" href="FAQ">FAQ</a>
+                        </li>
+                        <li class="nav-item mx-2 ">
+                            <a class="nav-link py-4" href="services">SERVICES</a>
+                        </li>
+                        <li class="nav-item mx-2 ">
+                            <a class="nav-link py-4" href="catalog">OUR CATALOG</a>
+                        </li>
+                        <li class="nav-item mx-2 ">
+                            <a class="nav-link py-4" href="privacy">PRIVACY POLICY</a>
                         </li>
                     </ul>
                 </div>
             </nav>
 
-            <div class="container-fluid ">
-                <div class="row">
-                    <div class="col text-center text-light  p-5">
-                        <div class="py-5 ">
-                            <p class="display-3 font-weight-bold pb-3 text-darken ">Contact Us </p>
-                        </div>
-                        <div class="px-2 mb-5 ">
-                            <a class="btn btn-lg  btn-success rounded  mx-2 mb-2">
-                                <i class="fab fa-whatsapp fa-lg mr-1"></i>
-                                <span class="h5">+1(740)306-2240</span>
-                            </a>
-                            <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2">
-                                <i class="fas fa-envelope fa-lg mr-1"></i>
-                                <span class="h5">dummy@ielts.com</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="rounded-lg bg-white text-center p-5 m-5">
+                <h5 class="h2 text-success font-weight-bold ">Success</h5>
+                <p class="h4 text-dark  text-center p-2">Your request has been sent. We will contact
+                    you shortly</p>
+
+                <a class="btn btn-lg  btn-success rounded w-50 my-4 " href="../">
+                    <span class="h5">Home</span>
+                </a>
+
+                <ul class="nav my-5 nav-fill">
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img10.jpg">
+                    </li>
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img11.jpg">
+                    </li>
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img12.jpg">
+                    </li>
+
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img13.jpg">
+                    </li>
+
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img14.jpg">
+                    </li>
+
+                    <li class="nav-item">
+                        <img class="img-fluid" src="img/img15.jpg">
+                    </li>
+                </ul>
+
+
             </div>
+
         </div>
 
     </header>
 
-    <div class="bg-light darken p-3">
-        <div class="bg-form ">
-            <div class="container text-center p-5">
-                <form method="post" action="php/handler.php" class="bg-light p-5 main-form rounded-lg">
-                    <div class="form-group ">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" name="name" id="name" placeholder="John Doe">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">email</label>
-                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="email" class="form-control" name="subject" id="subject" placeholder="I need a ">
-                    </div>
 
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea class="form-control" name="message" id="message" rows="6"></textarea>
-                    </div>
 
-                    <div class="form-group">
-                        <input type="submit" class="btn btn-primary py-2 px-5" id="send" value="send">
-                    </div>
-                </form>
-            </div>
-        </div>
+
+
+    <div class="container-fluid bg-white">
+        <img src="img/img20.png" class="p-5 card-img-top">
     </div>
 
-    <footer class="container-fluid bg-dark text-light text-center ">
+    <footer class="container-fluid bg-dark text-light text-center">
         <div class="row">
             <div class="col-md-3">
                 <p class="">
@@ -171,9 +166,9 @@
     </footer>
 
 
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-56679422-e6c9-4589-ad3d-0ce39c661d8f"></div>
 
