--- a/catalog/index.html
+++ b/catalog/index.html
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" name="subject" id="subject"
+                                    <input type="text" class="form-control" name="subject" id="subject"
                                         placeholder="I need a ">
                                 </div>
 
@@ -282,7 +282,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" name="subject" id="subject"
+                                    <input type="text" class="form-control" name="subject" id="subject"
                                         placeholder="I need a ">
                                 </div>
 
@@ -346,7 +346,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" name="subject" id="subject"
+                                    <input type="text" class="form-control" name="subject" id="subject"
                                         placeholder="I need a ">
                                 </div>
 
@@ -392,7 +392,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" name="subject" id="subject"
+                                    <input type="text" class="form-control" name="subject" id="subject"
                                         placeholder="I need a ">
                                 </div>
 
@@ -437,7 +437,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="email" class="form-control" name="subject" id="subject"
+                                    <input type="text" class="form-control" name="subject" id="subject"
                                         placeholder="I need a ">
                                 </div>
 
