--- a/contact/index.html
+++ b/contact/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="form-group">
                         <label for="subject">Subject</label>
-                        <input type="email" class="form-control" name="subject" id="subject" placeholder="I need a ">
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="I need a ">
                     </div>
 
                     <div class="form-group">
